fix lower part alignment

--- a/main.css
+++ b/main.css
@@ -94,6 +94,11 @@ html {
   width: 157px !important;
   height: 165px !important;
   margin: 0 !important;
+  box-shadow: none !important;
+}
+
+.square:hover {
+  outline: none !important;
 }
 
 #pro-tips {
@@ -125,4 +130,25 @@ html {
 #upper {
   display: flex;
   justify-content: center;
+}
+
+.lower {
+  display: flex;
+  justify-content: center;
+  padding-left: 60px;
+}
+
+#live-slide {
+  width: 345px;
+  height: 350px;
+  box-shadow: none;
+  margin: 0 20px !important;
+}
+
+#live-slide:hover {
+  outline: none;
+}
+
+#add-on {
+  margin-top: 20px !important;
 }
